[web] Fix for elongated cover artworks being distorted
Elongated cover artworks were distorted when displayed on album lists.

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -159,6 +159,7 @@ section.hero + section.fd-content {
 }
 
 .fd-cover {
+  align-items: center;
   display: flex;
   justify-content: center;
   &-small-image {
